fixed some bank css; fix to tabbedEditor display bug; trying to fix inline notifs not showing

--- a/packages/sdk/vanillajs-demo/public/bank.css
+++ b/packages/sdk/vanillajs-demo/public/bank.css
@@ -1,3 +1,9 @@
+.container {
+  width:100%;
+  max-width:100%;
+  margin:0 auto;
+}
+
 .my-inline-container {
   --light-grey: #D3D3D3;
   --dark-grey: #505050;
@@ -101,3 +107,4 @@
   font-size: 20px; /* Font size for "X" */
   cursor: pointer; /* Pointer cursor for interactivity */
 }
+
